# capture2text-pro-rs

./: .dependency-cruiser.cjs  .gitignore  .oxlintrc.json  HANDOFF.md  LICENSE  README.md  STAGE7_PLAN.md  T28B_SPEC.md  T28_SPEC.md  T30_42_SPEC.md  T32_41_SPEC.md  T35G_SPEC.md  T35H_SPEC.md  T35I_SPEC.md  T35J_SPEC.md  T36A_SPEC.md  T36B_SPEC.md  T37_REVISE.md  T37_SPEC.md  T38_SPEC.md  T39_SPEC.md  T40_SPEC.md  T43_BRIEFING.md  T43_SPEC.md  T44_SPEC.md  T45_SPEC.md  T46_SPEC.md  T47_SPEC.md  T48_BRIEFING.md  T48_SPEC.md  T49_SPEC.md  T50A_SPEC.md  T50B_SPEC.md  T50_MASTER.md  T51A_ISOLATED_TEST.md  T51A_SPEC.md  T51B_SPEC.md  lefthook.yml  package-lock.json  package.json  (+1 more)
.cargo/: config.toml
.github/workflows/: release.yml
docs/: GPU_LEAK_FIX.md  build-setup.md  capture-spec.md  perf-latency-plan.md  win-we-regression-rca.md
public/: overlay.html
scripts/: encoding_probe.txt
src/: App.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_handle.rs  app_paths.rs  clipboard.rs  diagnostic.rs  drag_overlay.rs  error.rs  gpu_monitor.rs  inventory.rs  languages.rs  lib.rs  main.rs  mouse_hook.rs  ollama_boot.rs  output_lang.rs  overlay.rs  tray.rs  window_state.rs
src-tauri/src/azure_tts/: client.rs  keyring.rs  mod.rs  playback.rs  preview_cache.rs  runtime.rs  speak_cache.rs  usage.rs
src-tauri/src/capture/: log.rs  mod.rs  params.rs  pipeline.rs  preprocess.rs  screen_capture.rs  screenshot.rs  windows_capture_pool.rs
src-tauri/src/commands/: azure_tts.rs  files.rs  hotkey.rs  languages.rs  llama_runtime.rs  mod.rs  models.rs  output_lang.rs  result_window.rs  scenarios.rs  translate.rs  tts.rs
src-tauri/src/hotkey/: keyboard_hook.rs  mod.rs
src-tauri/src/leptonica/: bounding_rect.rs  mod.rs
src-tauri/src/llama_runtime/: downloader.rs  manifest.rs  mod.rs  supervisor.rs
src-tauri/src/qwen_tts/: downloader.rs  mod.rs  runtime.rs
src-tauri/src/scenarios/: mod.rs
src-tauri/src/tts/: config.rs  mod.rs
src-tauri/src/vlm/: mod.rs  state.rs
src-tauri/windows/: installer.nsh  installer.nsi
src/components/ui/: banner.tsx  button.tsx  card.tsx  checkbox.tsx  form-field.tsx  index.ts  input.tsx  key-capture.tsx  modal.tsx  path-picker.tsx  popover.tsx  progress-bar.tsx  radio.tsx  section.tsx  select.tsx  slider.tsx  snackbar.tsx  status-text.tsx  tab-nav.tsx  toggle.tsx  usage-donut.tsx
src/result/: ResultView.css  ResultView.tsx
src/services/: autostart.ts  hotkey.ts  llama.ts  tauri.ts  tts.ts
src/settings/: SettingsView.css  SettingsView.tsx
src/settings/tabs/: AboutTab.tsx  HelpTab.tsx  HotkeyTab.tsx  LanguagesTab.tsx  ModelsTab.tsx  OutputTab.tsx  SpeechTab.tsx  TranslateTab.tsx
src/styles/: tokens.css
vcpkg-overlay/libjpeg-turbo/: portfile.cmake  usage  vcpkg.json  workaround_cmake_system_processor.patch
