[package]
name = "capture2text-pro-rs"
version = "0.4.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "capture2text-pro-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "capture2text_pro_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_System_LibraryLoader",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_System_JobObjects",
  "Win32_Security",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
xcap = "0.9.4"
image = { version = "0.25.10", default-features = false, features = ["png"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
dirs = "6.0.0"
leptonica-sys = "0.4.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
rodio = { version = "0.19", default-features = true }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
arboard = "3"
walkdir = "2"
async-trait = "0.1"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }

[dev-dependencies]
wiremock = "0.6"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.1"

# Release profile 用 cargo default(codegen-units=16, lto=off, opt-level=3)
# rustc 1.95.0 + 全新 toolchain reinstall 後,codegen-units=1 反而觸發 lib 階段 crash,改回 default
